most of section 5 of the letter

--- a/recoltes-et-semailles/part-0-letter/5.md
+++ b/recoltes-et-semailles/part-0-letter/5.md
@@ -1,5 +1,11 @@
 ### 5. The voyage
-I believe that I've more or less finished the tour, there, of the context in which my "return to maths" and, one thing leading to another, the writing of Harvests and Sowings, is situated. It was late March of last year, in the very last section of Fatuité et Renouvellement ("Le poids d'un passé" ([n&deg; 50](../table-of-contents.md#poids-passe))), that I thought again to question myself about the reasons and about the meaning of this unexpected return. Of all the "reasons", the strongest of all was surely the impression, diffuse and imperious at the same time, that the strong and vigorous things, that I had grown long ago to entrust between loving hands &mdash; "it is in a tomb, [...]"<sup>91(&ast;)</sup>
+I believe I have more or less finished the tour, now, of the context in which my "return to maths" and, one thing leading to another, the writing of Harvests and Sowings, is situated. It was late March of last year, in the very last section of Fatuité et Renouvellement ("Le poids d'un passé" ([n&deg; 50](../table-of-contents.md#poids-passe))), that I thought again to question myself on the reasons and on the meaning of this unexpected return. Of all the "reasons", the strongest of all was surely the impression, diffuse and imperious at the same time, that these strong and vigorous things, that I had grown long ago to entrust between loving hands &mdash; "it is in a tomb, [...]"<sup>91</sup>(&ast;) [...]
+
+It is thus, two years ago, that that which was first planned as a rapid prospection, of a few days or a few weeks at the most, of one of these neglected "building sites", became a great mathematical serial in $N$ volumes, inserting itself into the famous new series of ("Mathematical", while waiting to be pruned of this useless qualifier) "Reflections". Indeed, since the moment that I knew that I was about to write a mathematical work intended for publication, I also knew that I was going to include, in addition to a "mathematical" introduction more or less in line with the usual practice, another "introduction", of a more personal nature.. I felt that it was important that I expressed myself on my "return", which was by no means the return to an _environment_, but merely the "return" to an intense mathematical investment and to the publication of mathematical texts from my pen, for an indeterminate duration. Likewise, I wanted to express myself on the spirit in which I now wrote mathematics, very different in certain regards from the spirit of my writings from before my departure &mdash; the "logbook" spirit of a voyage of discovery. Not to mention that there were other things that I had weighing on my heart, related to these no doubt, but that I felt still more essential. It was clear to me that I was going to take my time to say whatever I had to say. These things, however diffuse, were inseparable for me in the sense of having these volumes that I was going to write, and the "Reflections" in which they were going to insert themselves. There was no question about sliding them in on the sly, as if apologizing to abuse the precious time of a pressed reader. If there were things in "Pursuing stacks" of which it was good, for him or for all, to take note of, they were precisely those that I reserve myself to say in this introduction. If twenty or thirty pages would not do, to say them, I would put forty, even fifty, never mind &mdash; not to mention that I'm not forcing anyone to read me...
+
+It is thus that Harvests and Sowings was born. I wrote the first pages of the planned introduction in the month of June 1983, in an empty moment of the writing of the first volume of Pursuing Stacks. Then I gave it until February last year, when my volume had been practically finished for several months<sup>93</sup>(&ast;). I thought that this introduction would be an occasion to enlighten myself on two or three things which remained a bit blurry in my mind. But I didn't have any suspicion that this would be, just like the volume that I had just written, a _voyage of discovery_; a voyage in a different world, richer and of vaster dimensions than that which I had prepared to prospect, in the volume written and in those which would follow. It is over the days, the weeks and the months, without really realizing what happened, that a new voyage was pursued, to the discovery of a certain past (obstinately avoided for three decades...), and of myself and links that tie me to this past; moreover to the discovery of certain of those who were close to me in the mathematical world, and that I have known to little; and finally, as a result and in addition, a voyage of mathematical discovery, while for the first time in fifteen years<sup>94</sup>(&ast;), I took the leisure to return to certain question that I had left, burning, at the moment of my departure. I can say, in summary, that they are _three_ voyages of discovery, intimately interwoven, that I pursue in the pages of Harvests and Sowings. And none of these three has achieved its final point, at page twelve hundred and something. The echoes, already, that my testimony will gather (up to and including the echo of silence) will make part of the "rest" of the voyage. As to its "completion", this voyage is surely among those that are never conducted to the end &mdash; not even, for all I know, at the day of our death...
+
+And here I am finally returning to the point of departure: to tell you in advance, if possible, "what it's about" in Harvests and Sowings. But it is also true that without having even tried, the preceeding pages have already told you more or less. It will be more interesting, perhaps, to continue on my momentum and to _recount_, rather than to "announce".
 
 ---
 
@@ -7,6 +13,6 @@ I believe that I've more or less finished the tour, there, of the context in whi
 
 <sup>92</sup>(&ast;&ast;)
 
-<sup>93</sup>(&ast;)
+<sup>93</sup>(&ast;) Meanwhile I had spent a good month reflecting on the "structural surface" of a system of [pseudo-droites], obtained in terms of the set of all possible "relative positions" of a [pseudo-droite] relative to such a system.
 
-<sup>94</sup>(&ast;)
+<sup>94</sup>(&ast;) In these fifteen or sixteen years, I have often repressed my desire to throw myself at the pursuit of such juicy and burning questions, engrossed as I was by endless tasks of foundations, that no one would've known or wanted to pursue in my place, and that nobody after my departure has had the heart to continue...
