work a lot on section 6

--- a/recoltes-et-semailles/part-0-letter/6.md
+++ b/recoltes-et-semailles/part-0-letter/6.md
@@ -1,18 +1,21 @@
-### 6. The dark side &mdash; or creation and contempt
 <div style="text-align: right"><i>June 1985</i></div>
-The preceeding pages were written thanks to a short "empty moment", last month. Meanwhile, I finally finished making the final touches on the "Four Operations" (the fourth part of Harvests and Sowings) &mdash; it only remains for me to end this letter or "pre-letter" (which also appears to be taking prohibitive dimensions...) so that all will be finally ready for typing [(?) fr: frappe] and duplication. I couldn't believe it, because, almost a year and a half I've been "close to finishing" these famous notes!
 
-When starting on this "introduction" slightly unusual in nature for a mathematical work, in the month of February of last year (and already the year before that, in the month of June), there were (I believe) three kinds of things above all on which I desired to express myself. First of all, I wanted to explain my intentions on returning to mathematical activity, and the spirit in which I had written the first volume of "Pursuing Stacks" (that I came to declare as finished), and also the spirit in which I intended to pursue a voyage of prospection and still vaster mathematical discovery, with the "Réflections". It would no longer do for me, from now on, to present meticulous foundations to the nines for some new mathematical universe in childbed. This would rather be a "logbook", where the work would be pursued from day to day, without hiding anything and like it is _really_ pursued, with its failures and its messes, its insistant backtracking and also its sudden leaps forward &mdash; a work pulled irresistibly forward day after day (and in spite of incidents and innumerable unforeseen events), as if by an invisible thread &mdash; by some elusive vision, tenacious and trustworthy. A work often feeling its way, especially in its "sensitive moments" when there crops up, barely parceptible, some intuition still nameless and faceless; or at the beginning of some new travel, [...] pursuit of some first ideas and intuitions, often elusive and reluctant to let themselves be grasped by the mesh of language, as it is precisely the language adequate for grasping them delicately which is often still lacking. It is such a language, above all else, which is therefore to be condensed out of an apparent nothingness of impalpable mist. This which is still only foreseen, before being only vaguely glimpsed and still less "seen" and pinpointed, settles down little by little from the imponderable, emerges from its cloak of darkness and mist to take form and flesh and weight...
+### 6. The dark side &mdash; or creation and contempt
+The preceding pages were written as the result of a short "empty moment", last month. Meanwhile, I finally finished putting the final touches on the "Four Operations" (the fourth part of Harvests and Sowings) &mdash; it only remains for me to end this letter or "pre-letter" (which also appears to be taking prohibitive dimensions...) so that all will finally be ready for the typing and the duplication. I couldn't believe it, because, almost a year and a half I've been "close to finishing" these famous notes!
 
-It is this part of the work, bad looking and not to say (often times) crappy, which is also the most delicate and essential part &mdash; that where, truly, anything _new_ makes its appearance, by the effect of an intense attention, of solicitude, of respect for that fragile thing, infinitely delicate, about to be born. It is the creative part among all &mdash; that of the conception and of a slow gestation in the hot darkness of the nourishing womb, from the invisible original double gamete, becoming a shapeless embryo and transforming as the days and months pass by, by an obscure and intense work, invisible and without appearance, into a new being in the flesh.
+When starting on this "introduction" which is slightly unusual in nature for a mathematical work, in the month of February last year (and already the year before that, in the month of June), there were (I believe) three kinds of things above all on which I wanted to express myself. First of all, I wanted to explain my intentions on returning to mathematical activity, and on the spirit in which I had written the first volume of "Pursuing Stacks" (that I had just declared finished), and also on the spirit in which I intended to pursue a voyage of prospection and of still vaster mathematical discovery, with the "Reflections". It would no longer do for me, from now on, to present meticulous and perfect foundations for some new mathematical universe in childbed. This would rather be a "logbook", where the work would be pursued from day to day, without hiding anything and such as it is _really_ pursued, with its failures and its messes, its insistant backtracking and also its sudden leaps forward &mdash; a work pulled irresistibly forward day after day (and in spite of incidents and innumerable unforeseen events), as if by an invisible thread &mdash; by some elusive vision, tenacious and trustworthy. A work often feeling its way, especially in its "sensitive moments" when there crops up, barely perceptible, some intuition still nameless and faceless; or at the beginning of some new travel, to the call and the pursuit of some first ideas and intuitions, often elusive and reluctant to let themselves be grasped by the mesh of language, as it is precisely the language adequate for grasping them delicately which is often still lacking. It is such a language, above all else, which is therefore to be condensed out of an apparent nothingness of impalpable mist. This which is still only foreseen, before being only vaguely glimpsed and still less "seen" and pinpointed, settles down little by little from the imponderable, emerges from its cloak of darkness and mist to take form and flesh and weight...
 
-This is also the "obscure" part, the "yin" or _"feminine"_ part of the work of discovery. The complementary aspect, the part of "clarity", or "yang" or _"masculine"_, would rather resemble work by strikes of a hammer or a weight, on a sharpened burin or on a wedge of tempered steel. [...]
+It is this part of the work, bad looking and not to say (often times) crappy, which is also the most delicate and essential part &mdash; the one where, truly, anything _new_ makes its appearance, by the effect of an intense attention, of solicitude, of respect for that fragile thing, infinitely delicate, about to be born. It is the creative part among all &mdash; that of the conception and of a slow gestation in the hot darkness of the nourishing womb, from the invisible original double gamete, becoming a shapeless embryo and transforming as the days and months pass by, by an obscure and intense work, invisible and without appearance, into a new being in the flesh.
 
-The second thing on which I felt a need to express myself, in my famous "introduction" both personal and "philosophical" for a mathematical text, was the subject of the nature of precisely creative work. I realized already, several years back, that this nature was generally ignored, occulted by clichés from anybody and by repressions and ancestral fears. [...]
+This is also the "obscure" part, the "yin" or _"feminine"_ part of the work of discovery. The complementary aspect, the "clear", or "yang" or _"masculine"_ part, would rather resemble work by strikes of a hammer or a weight, on a sharpened burin or on a wedge of tempered steel. (Tools already fully ready for use, and of an efficiency which has already been proven...) Each aspect has its reason for being and its function, in inseparable symbiosis with one another &mdash; or better put, they are _husband_ and _wife_ of the inseparable couple of two original cosmic forces, whose incessantly renewed embrace incessantly brings back the obscure creative toils of conception, of gestation and of birth &mdash; of the birth of _a child_, of something new.
 
-For the record, it would seem that the repression of the knowledge of this aspect or of this stage, the most crucial of all in all works of discovery (and in creative work in general), is effective to such an extent, so internalized by those who however know such work firsthand, that often one would swear that even those have eradicated every trace of their conscious memory. A little like in an utmost puritan society, a woman would have eradicated from her memory, in relation to [...]
+The second thing on which I felt the need to express myself, in my famous "introduction" both personal and "philosophical" for a mathematical text, was the subject of the nature of precisely creative work. I have already realized, for many years, that this nature was generally ignored, obscured by clichés for all comers and by repressions and ancestral fears. [...], I have discovered it only later, progressively, over the days and months, throughout the reflection and the "survey" pursued in Harvests and Sowings. It is after the "kick-off" of this reflection, over some pages dated to June 1983, that I was seized for the first time by the scope of this apparently anodyne and yet stupefying fact, only for so long as one stops a little bit: this "creator among all" [fr: créatrice entre toutes] of which I've come to speak in the work of discovery, _is reflected practically nowhere_ in the texts or discourses which are supposed to present such a work (or at least, its most tangible fruits); that these are textbooks and other didactic texts, or articles and original memoires, or oral courses and presentations in seminars etc. There has been, since millennia it seems, since the very origins of mathematics and others arts and sciences, a sort of "conspiration of silence" around these _"unmentionable labors"_ [fr: inavouables labeurs] that were a prelude to the hatching of every new idea, big or small, coming to renew our awareness of a portion of this world, in perpetual creation, where we live.
 
-This comparison may seem excessive, and maybe it actually is, if I apply it to [...]
+In fact, it seems like the repression of this awareness and of this aspect or of this stage, the most crucial of all in every work of discovery (and in creative work in general), is so effective, so internalized by even those who nonetheless know such work first-hand, that one could often swear that even they have eradicated every trace of it from their conscious memory. A little like in an excessively puritan society, a woman would have eradicated from her memory, in relation to each of those children whom she made it her mission to blow and wipe, the moment of embrace (suffered unwillingly) that conceived it, long months of childbearing (experienced as an impropriety), and the long hours of childbirth (endured as a gross ordeal, followed finally by the delivery).
+
+This comparison may seem exaggerated, and perhaps it actually is, if I apply it to that of which I recall today of the spirit that I knew in the mathematical milieu of which I was myself a part, [encore] twenty years ago. But in the course of my reflection in Harvests and Sowings I was able to realize, and in a striking way especially in these last few months (with the writing of "Quatre Opérations"), that there had been since my departure from the mathematical scene a stunning _degradation_ in the spirit which today is law in the social circles that I have known, and (it seems to me, in large measure at least) in the mathematical world at large<sup>95</sup>(&ast;). It is even possible, thanks to both my very particular mathematical personality and to the conditions which surrounded my departure, that this has acted as a catalyst in an evolution which was already under way<sup>96</sup>(&ast;&ast;) &mdash; an evolution of which I had then not been able to see anything (any more than the rest of my colleagues and friends, with the sole exception perhaps of Claude Chevalley). The aspect of this degradation on which I think especially here (which is just _one_ aspect among numerous others<sup>97</sup>(&ast;&ast;&ast;)) is the _tacit contempt_, unless it is unambiguous derision, at the encounter with that which (in mathematics, in this case) doesn't resemble a pure work with the hammer on the anvil or on the burin &mdash; the contempt for the most delicate creative processes [...]
+
+[...]
 
 There has been (to use an expression of C. L. Siegel<sup>98</sup>(&ast;)) an extraordinary "flattening", a "shrinking" [...]
 
@@ -20,10 +23,10 @@ There has been (to use an expression of C. L. Siegel<sup>98</sup>(&ast;)) an ext
 
 ---
 
-<sup>95</sup>(&ast;)
+<sup>95</sup>(&ast;) This degradation is moreover not limited to just the "world of mathematics". One finds it similarly in the whole of scientific life, and even deeper than that, in the contemporary world on a global scale. A primer of observation and reflection in this sense is to be found in the note "Le muscle et la tripe" which opens the reflection on yin and yang ([note n&deg; 106](../table-of-contents.md#muscle-tripe)).
 
-<sup>96</sup>(&ast;&ast;)
+<sup>96</sup>(&ast;&ast;) It is the evolution examined in the note cited in the preceding footnote. The connection between it and the Burial (of my person and of my work) make their appearance and are examined in the notes "Les Obsèques du Yin (yang enterre yin (4))", "La circonstance providentielle &mdash; ou l'Apothéose", "Le désaveu (1) &mdash; ou le rappel", "Le désaveu (2) &mdash; ou la métamorphose" (n&deg;s [124](../table-of-contents.md#obseques-yin), [151](../table-of-contents.md#circonstance), [152](../table-of-contents.md#desaveu-1), [153](../table-of-contents.md#desaveu-2)). See also the recent footnotes (in part 4 of Harvests and Sowings) "Les détails inutiles" ([n&deg; 171(v)](../table-of-contents.md#details-inutiles), part (c) "Des choses qui ressemblent à rien... &mdash; ou le dessèchement") and "L'album de famille" ([n&deg; 173](../table-of-contents.md#album-famille), part c. "Celui entre tous &mdash; ou l'acquiescement").
 
-<sup>97</sup>(&ast;&ast;&ast;)
+<sup>97</sup>(&ast;&ast;&ast;) The aspect which is most often at the center of attention in Harvests and Sowings [...]
 
 <sup>98</sup>(&ast;)
