first draft of section 6

--- a/recoltes-et-semailles/part-0-letter/6.md
+++ b/recoltes-et-semailles/part-0-letter/6.md
@@ -13,13 +13,11 @@ The second thing on which I felt the need to express myself, in my famous "intro
 
 In fact, it seems like the repression of this awareness and of this aspect or of this stage, the most crucial of all in every work of discovery (and in creative work in general), is so effective, so internalized by even those who nonetheless know such work first-hand, that one could often swear that even they have eradicated every trace of it from their conscious memory. A little like in an excessively puritan society, a woman would have eradicated from her memory, in relation to each of those children whom she made it her mission to blow and wipe, the moment of embrace (suffered unwillingly) that conceived it, long months of childbearing (experienced as an impropriety), and the long hours of childbirth (endured as a gross ordeal, followed finally by the delivery).
 
-This comparison may seem exaggerated, and perhaps it actually is, if I apply it to that of which I recall today of the spirit that I knew in the mathematical milieu of which I was myself a part, [encore] twenty years ago. But in the course of my reflection in Harvests and Sowings I was able to realize, and in a striking way especially in these last few months (with the writing of "Quatre Opérations"), that there had been since my departure from the mathematical scene a stunning _degradation_ in the spirit which today is law in the social circles that I have known, and (it seems to me, in large measure at least) in the mathematical world at large<sup>95</sup>(&ast;). It is even possible, thanks to both my very particular mathematical personality and to the conditions which surrounded my departure, that this has acted as a catalyst in an evolution which was already under way<sup>96</sup>(&ast;&ast;) &mdash; an evolution of which I had then not been able to see anything (any more than the rest of my colleagues and friends, with the sole exception perhaps of Claude Chevalley). The aspect of this degradation on which I think especially here (which is just _one_ aspect among numerous others<sup>97</sup>(&ast;&ast;&ast;)) is the _tacit contempt_, unless it is unambiguous derision, at the encounter with that which (in mathematics, in this case) doesn't resemble a pure work with the hammer on the anvil or on the burin &mdash; the contempt for the most delicate creative processes [...]
+This comparison may seem exaggerated, and perhaps it actually is, if I apply it to that of which I recall today of the spirit that I knew in the mathematical milieu of which I was myself a part, [encore] twenty years ago. But in the course of my reflection in Harvests and Sowings I was able to realize, and in a striking way especially in these last few months (with the writing of "Quatre Opérations"), that there had been since my departure from the mathematical scene a stunning _degradation_ in the spirit which today is law in the social circles that I have known, and (it seems to me, in large measure at least) in the mathematical world at large<sup>95</sup>(&ast;). It is even possible, thanks to both my very particular mathematical personality and to the conditions which surrounded my departure, that this acted as a catalyst in an evolution which was already under way<sup>96</sup>(&ast;&ast;) &mdash; an evolution of which I then wasn't able to see anything (any more than the rest of my colleagues and friends, with the sole exception perhaps of Claude Chevalley). The aspect of this degradation on which I think especially here (which is just _one_ aspect among numerous others<sup>97</sup>(&ast;&ast;&ast;)) is the _tacit contempt_, when it isn't unambiguous derision, at the encounter with that which (in mathematics, in this case) isn't like pure work with a hammer on the anvil or on the burin &mdash; the contempt for the most delicate creative processes (often not seeming like much); for all that is _inspiration_, _dreaming_, _vision_ (no matter how powerful and fertile), and even (ultimately) of every _idea_, no matter how clearly conceived and formulated: for all that isn't written and _published_ black on white, in the form of hardcore statements, indexed and listed, ripe for the "databases" engulfed in the endless memories of our mainframes.
 
-[...]
+There was (to use an expression of C. L. Siegel<sup>98</sup>(&ast;)) an extraordinary _"flattening"_, a _"shrinking"_ of mathematical thought, robbed of an essential dimension, of all of its "shady hillside", of the "feminine" side. It is true that by an ancestral tradition, this side of the work of discovery remained to a large extent obscured, nobody (needless to say) ever _talked_ about it &mdash; but the living contact with the profound sources of the dream, which feed the grand visions and great designs, has still never (to my knowledge) been lost.<sup>[?]</sup>. It seems like right now we have already entered into an _epoch of drought_, where that source is, not [...], but where its access is [...], by the sentence without appeal of the general contempt and by the reprisals of the derision.
 
-There has been (to use an expression of C. L. Siegel<sup>98</sup>(&ast;)) an extraordinary "flattening", a "shrinking" [...]
-
-[...]
+Here we are approaching the moment, it seems, when will be eradicated in everyone not only the _memory_ of all work close to the source, of the work "in the feminine" (ridiculed as "muddy", "slack", "inconsistent" &mdash; or finally opposed as "trivialities", "childish things", ["bombinage" - whirring?]...), but where will likewise be extirpated the work itself and its fruits: the one where the notions and new visions are conceived, developed and born. This will also be the epoch of when the exercise of our art will reduce to arid and vain exhibitions of celebrated "weight lifting", to escalations of prowess to "crack" contest problems ("of legendary difficulty" [fr: de difficulté proverbiale]) &mdash; the epoch of a "supermacho" hypertrophy, feverish and sterile, taking over after more than three centuries of creative renewal.
 
 ---
 
@@ -27,6 +25,6 @@ There has been (to use an expression of C. L. Siegel<sup>98</sup>(&ast;)) an ext
 
 <sup>96</sup>(&ast;&ast;) It is the evolution examined in the note cited in the preceding footnote. The connection between it and the Burial (of my person and of my work) make their appearance and are examined in the notes "Les Obsèques du Yin (yang enterre yin (4))", "La circonstance providentielle &mdash; ou l'Apothéose", "Le désaveu (1) &mdash; ou le rappel", "Le désaveu (2) &mdash; ou la métamorphose" (n&deg;s [124](../table-of-contents.md#obseques-yin), [151](../table-of-contents.md#circonstance), [152](../table-of-contents.md#desaveu-1), [153](../table-of-contents.md#desaveu-2)). See also the recent footnotes (in part 4 of Harvests and Sowings) "Les détails inutiles" ([n&deg; 171(v)](../table-of-contents.md#details-inutiles), part (c) "Des choses qui ressemblent à rien... &mdash; ou le dessèchement") and "L'album de famille" ([n&deg; 173](../table-of-contents.md#album-famille), part c. "Celui entre tous &mdash; ou l'acquiescement").
 
-<sup>97</sup>(&ast;&ast;&ast;) The aspect which is most often at the center of attention in Harvests and Sowings [...]
+<sup>97</sup>(&ast;&ast;&ast;) The aspect which is most often at the center of attention in Harvests and Sowings, and especially in the two "survey" parts (part 2 or "La robe de l'Empereur de Chine", and part 4 or "Les Quatre Opérations"), and also those, perhaps, which have "flabbergasted" me the most, is the degradation of the professional ethics, expressing itself as a looting. a mine clearance and a shameless scheming, practiced among some of the most prestigious and brilliant mathematicians of the day, and this (to a very large extent) with full knowledge of it all. For certain other aspects that are more delicate, and moreover directly linked to this, I refer to the note already cited ([n&deg; 173](../table-of-contents.md#details-inutiles) part c.) "Des choses qui ressemblent à rien... &mdash; ou le dessèchement".
 
-<sup>98</sup>(&ast;)
+<sup>98</sup>(&ast;) This expression is cited and commented upon in the note just cited in the preceding footnote.
